--- a/static/css/oppia.scss
+++ b/static/css/oppia.scss
@@ -2,10 +2,10 @@
 // Option A: Include all of Bootstrap
 
 // Oppia colors
-$oppia-lighter: #c1e552;
-$oppia-light: #9aca3c;
-$oppia-mid: #689e3a;
-$oppia-dark: #628817;
+$oppia-lighter: #B2B2B2;
+$oppia-light: #C5C9F7;
+$oppia-mid: #6F79EA;
+$oppia-dark: #6F79EA;
 $info-color: #828d83;
 
 $navbar-dark-color: #fff;
